--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -12,6 +12,12 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
+    "@mamba/pos": "^2.4.0",
+    "@mamba/button": "^2.4.0",
+    "@mamba/collection": "^2.4.0",
+    "@mamba/styles": "^2.4.0"
+  },
+  "peerDependencies": {
     "@mamba/styles": "^2.4.0"
   }
 }
