ci: 🎡 Add test related to adminLock

--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "@mamba/pos": "^2.4.0",
-    "@mamba/styles": "^2.4.0"
+    "@mamba/styles": "^2.4.0",
+    "@mamba/button": "^2.4.0"
   },
   "peerDependencies": {
     "@mamba/pos": "^2.1.0"
