--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/appbar",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "svelte": "AppBar.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -15,14 +15,15 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "dependencies": {
-    "@mamba/icon": "^2.4.0"
+    "@mamba/icon": "^2.5.0"
   },
   "peerDependencies": {
     "@mamba/styles": "^2.1.0",
     "svelte": "^2.16.0"
   },
   "devDependencies": {
-    "@mamba/pos": "^2.4.0",
-    "@mamba/styles": "^2.4.0"
-  }
+    "@mamba/pos": "^2.5.0",
+    "@mamba/styles": "^2.5.0"
+  },
+  "gitHead": "b9834102336b1e8e0193d1e61d93ce320995b3db"
 }
