--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/tabs",
-  "version": "0.0.1",
+  "version": "2.5.0",
   "svelte": "Tabs.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -12,12 +12,13 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/pos": "^2.4.0",
-    "@mamba/button": "^2.4.0",
-    "@mamba/collection": "^2.4.0",
-    "@mamba/styles": "^2.4.0"
+    "@mamba/button": "^2.5.0",
+    "@mamba/collection": "^2.5.0",
+    "@mamba/pos": "^2.5.0",
+    "@mamba/styles": "^2.5.0"
   },
   "peerDependencies": {
     "@mamba/styles": "^2.4.0"
-  }
+  },
+  "gitHead": "b9834102336b1e8e0193d1e61d93ce320995b3db"
 }
