--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/app",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "svelte": "App.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,9 +14,9 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/pos": "^2.4.0",
-    "@mamba/styles": "^2.4.0",
-    "@mamba/button": "^2.4.0"
+    "@mamba/button": "^2.5.0",
+    "@mamba/pos": "^2.5.0",
+    "@mamba/styles": "^2.5.0"
   },
   "peerDependencies": {
     "@mamba/pos": "^2.1.0"
