--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -1,24 +1,27 @@
 {
   "name": "@mamba/tabs",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "svelte": "Tabs.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
     "Jaime Costa Marques <jcmarques@stone.com.br>"
   ],
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "jest",
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/button": "^2.5.0",
-    "@mamba/collection": "^2.5.0",
-    "@mamba/pos": "^2.5.0",
-    "@mamba/styles": "^2.5.0"
+    "@mamba/button": "^2.5.1",
+    "@mamba/collection": "^2.5.1",
+    "@mamba/pos": "^2.5.1",
+    "@mamba/styles": "^2.5.1"
   },
   "peerDependencies": {
     "@mamba/styles": "^2.4.0"
   },
-  "gitHead": "b9834102336b1e8e0193d1e61d93ce320995b3db"
+  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
