--- a/packages/components/Progress/package.json
+++ b/packages/components/Progress/package.json
@@ -3,10 +3,6 @@
   "version": "2.7.2",
   "svelte": "ProgressBar.html",
   "author": "Stone Payments - Mamba Team",
-  "contributors": [
-    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
-    "Pedro Lancelloti Kaisermann <pedro.lancelloti@stone.com.br>"
-  ],
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
@@ -17,8 +13,8 @@
   "dependencies": {
     "@mamba/styles": "^2.6.4"
   },
-  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
-  "devDependencies": {
+  "peerDependencies": {
     "@mamba/pos": "^2.7.2"
-  }
+  },
+  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
