--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -3,9 +3,6 @@
   "version": "2.6.4",
   "svelte": "Tabs.html",
   "author": "Stone Payments - Mamba Team",
-  "contributors": [
-    "Jaime Costa Marques <jcmarques@stone.com.br>"
-  ],
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
@@ -17,11 +14,11 @@
   "devDependencies": {
     "@mamba/button": "^2.6.4",
     "@mamba/collection": "^2.6.4",
-    "@mamba/pos": "^2.6.4",
     "@mamba/styles": "^2.6.4"
   },
   "peerDependencies": {
-    "@mamba/styles": "^2.4.0"
+    "@mamba/styles": "^2.4.0",
+    "@mamba/pos": "^2.7.2"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
