--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -14,7 +14,7 @@
     "@mamba/styles": "^2.8.2"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
-  "devDependencies": {
+  "peerDependencies": {
     "@mamba/pos": "^2.8.2"
   }
 }
