--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -11,12 +11,14 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/pos": "^2.8.2",
     "@mamba/styles": "^2.8.2"
   },
   "dependencies": {
     "@mamba/icon": "^2.8.2",
     "@mamba/utils": "^2.8.2"
+  },
+  "peerDependencies": {
+    "@mamba/pos": "^2.8.2"
   },
   "gitHead": "0daaddf15510894989750580009daa93e1fbb6db"
 }
