--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -15,7 +15,7 @@
     "qrious": "^4.0.2"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
-  "devDependencies": {
+  "peerDependencies": {
     "@mamba/pos": "^2.8.2"
   }
 }
