--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/tabs",
-  "version": "2.8.2",
+  "version": "2.8.3",
   "svelte": "Tabs.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,13 +8,13 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/button": "^2.8.2",
-    "@mamba/collection": "^2.8.2",
-    "@mamba/styles": "^2.8.2"
+    "@mamba/button": "^2.8.3",
+    "@mamba/collection": "^2.8.3",
+    "@mamba/styles": "^2.8.3"
   },
   "peerDependencies": {
-    "@mamba/styles": "^2.4.0",
-    "@mamba/pos": "^2.8.2"
+    "@mamba/pos": "^2.8.2",
+    "@mamba/styles": "^2.4.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
