--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -1,25 +1,21 @@
 {
   "name": "@mamba/collection",
-  "version": "2.8.2",
+  "version": "2.8.3",
   "svelte": "Collection.html",
   "author": "Stone Payments - Mamba Team",
-  "contributors": [
-    "Christian Kaisermann <christian.kaisermann@stone.com.br>"
-  ],
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
-  },
   "devDependencies": {
-    "@mamba/pos": "^2.8.2",
-    "@mamba/switch": "^2.8.2"
+    "@mamba/switch": "^2.8.3"
   },
   "dependencies": {
-    "@mamba/icon": "^2.8.2",
-    "@mamba/styles": "^2.8.2"
+    "@mamba/icon": "^2.8.3",
+    "@mamba/styles": "^2.8.3"
+  },
+  "peerDependencies": {
+    "@mamba/pos": "^2.8.2"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
