--- a/packages/components/Progress/package.json
+++ b/packages/components/Progress/package.json
@@ -1,24 +1,17 @@
 {
   "name": "@mamba/progress",
-  "version": "2.8.2",
+  "version": "2.8.3",
   "svelte": "ProgressBar.html",
   "author": "Stone Payments - Mamba Team",
-  "contributors": [
-    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
-    "Pedro Lancelloti Kaisermann <pedro.lancelloti@stone.com.br>"
-  ],
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
-  },
   "dependencies": {
-    "@mamba/styles": "^2.8.2"
+    "@mamba/styles": "^2.8.3"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
-  "devDependencies": {
+  "peerDependencies": {
     "@mamba/pos": "^2.8.2"
   }
 }
