feat: 🎸 adds the ability to configure feature flags
his allow you to control app build target, feature flags, versions for
production...Then you can use inside you code to control application
features and behaviors. For more information access
https://webpack.js.org/plugins/define-plugin/

BREAKING CHANGE: Feature Flags

--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-loader": "^8.0.4",
+    "chalk": "^2.4.2",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "eslint-loader": "^2.1.1",
