--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/webpack",
-  "version": "2.8.3",
+  "version": "2.9.1",
   "description": "Webpack configs for Mamba Applications",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/configs": "^2.8.3",
+    "@mamba/configs": "^2.9.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   },
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-loader": "^8.0.4",
+    "chalk": "^2.4.2",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "eslint-loader": "^2.1.1",
