refactor: 💡 Carousel: input radionow is dynamic

--- a/packages/components/Carousel/package.json
+++ b/packages/components/Carousel/package.json
@@ -13,5 +13,8 @@
   "peerDependencies": {
     "@mamba/pos": "^2.9.0"
   },
-  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
+  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
+  "dependencies": {
+    "@mamba/icon": "^2.9.1"
+  }
 }
