--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
     "format": "npm run format:css; npm run format:js",
-    "test": "jest --no-cache",
-    "test:watch": "jest --watch",
+    "test": "jest --no-cache --collect-coverage",
+    "test:watch": "jest --watch --collect-coverage",
     "test:ci": "jest --no-cache --verbose",
     "link:packages": "lerna exec npm link",
     "check-next-version": "echo 'n' | lerna version",
