feat: 🎸 It has been included date-fns and date-fns-tz

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,5 +9,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "0daaddf15510894989750580009daa93e1fbb6db"
+  "gitHead": "0daaddf15510894989750580009daa93e1fbb6db",
+  "dependencies": {
+    "date-fns": "^2.5.1",
+    "date-fns-tz": "^1.0.8"
+  }
 }
