--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,7 @@
     "publish": {
       "ignoreChanges": [
         "{.*,*}.{txt,md,yml}",
+        "{!readme.md}",
         "{.*,*}{.config,rc,ignore}{,.js}",
         "LICENSE",
         "lerna.json"
