refactor: 💡 mexendo no lerna.json

--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
   "command": {
     "publish": {
       "ignoreChanges": [
+        "{.*,*}.{txt,md,yml}",
         "{.*,*}{.config,rc,ignore}{,.js}",
         "LICENSE",
         "lerna.json"
