refactor: 💡 no more "NO PAPER" Dialog

--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -8,6 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@mamba/icon": "^2.23.0",
     "@mamba/styles": "^2.14.0"
   },
   "dependencies": {
