chore: 🤖 updade modules

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "rollup-plugin-virtual": "^1.0.1",
     "stylelint": "^9.10.0",
     "svelte": "^2.16.0",
-    "svelte-preprocess": "^2.4.3"
+    "svelte-preprocess": "^2.4.3",
+    "webpack-merge": "^4.2.2"
   }
 }
