--- a/package.json
+++ b/package.json
@@ -8,5 +8,22 @@
   "engines": {
     "node": ">= 8.10.0",
     "npm": ">= 5.6.0"
+  },
+  "scripts": {
+    "lint:js": "eslint \"{internal,packages}/**/*.{js,html,svelte}\""
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-svelte3": "^2.7.3",
+    "prettier": "^2.0.5",
+    "svelte": "^3.21.0",
+    "webpack-cli": "^3.3.11"
   }
 }
