--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "scripts": {
     "lint:js": "eslint \"{internal,packages}/**/*.{js,html,svelte}\""
   },
+  "lint-staged": {
+    "linters": {
+      "*.js": [
+        "prettier --write",
+        "git add"
+      ]
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "babel-eslint": "^10.1.0",
@@ -22,6 +30,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-svelte3": "^2.7.3",
+    "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
     "svelte": "^3.21.0",
     "webpack-cli": "^3.3.11"
