--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "scripts": {
     "lint:js": "eslint \"{internal,packages}/**/*.{js,html,svelte}\""
   },
-  "lint-staged": {
-    "linters": {
-      "*.js": [
-        "prettier --write",
-        "git add"
-      ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+      "*.js": [
+      "prettier --write"
+      ]
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-svelte3": "^2.7.3",
+    "husky": ">=4",
     "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
     "svelte": "^3.21.0",
