--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "npm": ">= 5.6.0"
   },
   "scripts": {
-    "lint:js": "eslint \"{internal,packages}/**/*.{js,html,svelte}\""
+    "lint:js": "eslint \"{internal,packages}/**/*.{js,html,svelte}\"",
   },
   "husky": {
     "hooks": {
@@ -18,7 +18,7 @@
     }
   },
   "lint-staged": {
-      "*.js": [
+    "*.{js,ts}": [
       "prettier --write"
       ]
   },
