--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,1 +1,23 @@
-{}
+{
+  "compilerOptions": {
+    "outDir": "build",
+    "rootDir": "lib",
+
+    "declaration": true,
+    "composite": true,
+    "esModuleInterop": true,
+    "inlineSources": true,
+    "target": "ES2017",
+    "lib": ["ES2017"],
+    "module": "CommonJS",
+
+    "moduleResolution": "node",
+    "noImplicitReturns": true,
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "typeRoots": ["node_modules/@types", "../../node_modules/@types"]
+  },
+  "include": ["lib"]
+}
