--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "mamba-sdk",
-  "version": "3.0.0-alpha",
+  "private": true,
   "description": "SDK for developing in the Mamba web environment",
   "repository": "https://github.com/stone-payments/pos-mamba-sdk.git",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "workspaces": [
+    "packages/*"
+  ],
   "engines": {
     "node": ">= 8.10.0",
     "npm": ">= 5.6.0"
   },
   "scripts": {
+    "bootstrap": "lerna bootstrap",
     "lint:js": "eslint \"{internal,packages}/**/*.{js,html,svelte}\"",
   },
   "husky": {
@@ -35,6 +38,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-svelte3": "^2.7.3",
     "husky": ">=4",
+    "lerna": "^3.20.2",
     "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
     "svelte": "^3.21.0",
