--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.9.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/jest": "^25.2.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-svelte3": "^2.7.3",
     "husky": ">=4",
+    "jest": "^26.0.1",
     "lerna": "^3.20.2",
     "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
