--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ npm-debug.log
 lerna-*
 /coverage.data
 /coverage
+/packages/**/*-lock.json
 
 ## Components examples
 /packages/components/*/example/*
