--- a/package.json
+++ b/package.json
@@ -58,15 +58,11 @@
     "@commitlint/cli": "^7.5.0",
     "@commitlint/config-conventional": "^7.5.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
-    "@mamba/app": "file:packages/components/App",
     "@mamba/configs": "file:packages/configs",
-    "@mamba/pos": "file:packages/pos",
-    "@mamba/styles": "file:packages/styles",
-    "@mamba/switch": "file:packages/components/Switch",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.5.0",
     "commitizen": "^3.0.5",
-    "core-js": "^3.0.0",
+    "core-js": "~3.1.0",
     "cross-env": "^5.2.0",
     "deasync": "^0.1.14",
     "eslint": "^5.12.0",
@@ -77,7 +73,7 @@
     "jest": "^24.5.0",
     "jest-canvas-mock": "^1.1.0",
     "lerna": "^3.10.7",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "~8.1.0",
     "postcss": "^7.0.13",
     "prettier": "^1.15.3",
     "quickenv": "^0.0.6",
