--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -8,11 +8,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/button": "^3.0.1",
-    "@mamba/styles": "^3.0.1"
+    "@mamba/button": ">3.0.0",
+    "@mamba/styles": ">3.0.0"
   },
   "peerDependencies": {
-    "@mamba/pos": "^2.8.2"
+    "@mamba/pos": ">3.0.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
