--- a/packages/components/Brands/package.json
+++ b/packages/components/Brands/package.json
@@ -8,9 +8,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/styles": "^3.0.1"
+    "@mamba/styles": ">3.0.0"
   },
   "peerDependencies": {
-    "@mamba/pos": "^2.8.2"
+    "@mamba/pos": ">3.0.0"
   }
 }
