--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -8,14 +8,14 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/icon": "^3.0.1",
-    "@mamba/styles": "^3.0.1"
+    "@mamba/icon": ">3.0.0",
+    "@mamba/styles": ">3.0.0"
   },
   "dependencies": {
-    "@mamba/dialog": "^3.0.1"
+    "@mamba/dialog": ">3.0.0"
   },
   "peerDependencies": {
-    "@mamba/pos": "^2.8.2"
+    "@mamba/pos": ">3.0.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
