--- a/packages/components/Radio/package.json
+++ b/packages/components/Radio/package.json
@@ -8,10 +8,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "^3.0.1"
+    "@mamba/styles": ">3.0.0"
   },
   "peerDependencies": {
-    "@mamba/pos": "^2.10.0"
+    "@mamba/pos": ">3.0.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
