--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -8,13 +8,13 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/button": "^3.0.1",
-    "@mamba/collection": "^3.0.1",
-    "@mamba/styles": "^3.0.1"
+    "@mamba/button": ">3.0.0",
+    "@mamba/collection": ">3.0.0",
+    "@mamba/styles": ">3.0.0"
   },
   "peerDependencies": {
-    "@mamba/pos": "^2.8.2",
-    "@mamba/styles": "^2.4.0"
+    "@mamba/pos": ">3.0.0",
+    "@mamba/styles": ">3.0.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
