--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -17,7 +17,7 @@
   },
   "peerDependencies": {
     "@babel/core": "^7.2.2",
-    "@mamba/pos": "^2.8.2",
+    "@mamba/pos": ">3.0.0",
     "eslint": "^5.13.0",
     "postcss": "^7.0.14",
     "prettier": "^1.16.4",
