--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -8,13 +8,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/app": "^3.0.1",
-    "@mamba/button": "^3.0.1",
-    "@mamba/dialog": "^3.0.1",
-    "@mamba/icon": "^3.0.1",
-    "@mamba/sprite": "^3.0.1",
-    "@mamba/styles": "^3.0.1",
-    "@mamba/switch": "^3.0.1",
+    "@mamba/app": ">3.0.0",
+    "@mamba/button": ">3.0.0",
+    "@mamba/dialog": ">3.0.0",
+    "@mamba/icon": ">3.0.0",
+    "@mamba/sprite": ">3.0.0",
+    "@mamba/styles": ">3.0.0",
+    "@mamba/switch": ">3.0.0",
     "immer": "^2.1.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
