--- a/packages/components/Carousel/package.json
+++ b/packages/components/Carousel/package.json
@@ -8,9 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": ">3.0.0"
-  },
-  "peerDependencies": {
+    "@mamba/styles": ">3.0.0",
     "@mamba/pos": ">3.0.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
