--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "@commitlint/cli": "^7.5.0",
     "@commitlint/config-conventional": "^7.5.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
+    "@mamba/app": "file:packages/components/App",
     "@mamba/configs": "file:packages/configs",
+    "@mamba/pos": "file:packages/pos",
+    "@mamba/styles": "file:packages/styles",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.5.0",
     "commitizen": "^3.0.5",
@@ -70,8 +73,8 @@
     "html-minifier": "^4.0.0",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.5.0",
-    "jest-canvas-mock": "^1.1.0",
+    "jest": "~24.5.0",
+    "jest-canvas-mock": "~1.1.0",
     "lerna": "^3.10.7",
     "lint-staged": "~8.1.0",
     "postcss": "^7.0.13",
