--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/dialog",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "svelte": "Dialog.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,11 +8,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/sprite": ">3.0.0"
+    "@mamba/sprite": "^3.0.2"
   },
   "dependencies": {
-    "@mamba/icon": ">3.0.0",
-    "@mamba/styles": ">3.0.0"
+    "@mamba/icon": "^3.0.2",
+    "@mamba/styles": "^3.0.2"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
