--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/icon",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "svelte": "Icon.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/styles": ">3.0.0"
+    "@mamba/styles": "^3.0.2"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
   "peerDependencies": {
