--- a/packages/components/Radio/package.json
+++ b/packages/components/Radio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/radio",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "svelte": "Radio.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": ">3.0.0"
+    "@mamba/styles": "^3.0.2"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
