--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/tabs",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "svelte": "Tabs.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,9 +8,9 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/button": ">3.0.0",
-    "@mamba/collection": ">3.0.0",
-    "@mamba/styles": ">3.0.0"
+    "@mamba/button": "^3.0.2",
+    "@mamba/collection": "^3.0.2",
+    "@mamba/styles": "^3.0.2"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0",
