--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/pos",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Mamba web environment wrapper and simulator",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,13 +8,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/app": ">3.0.0",
-    "@mamba/button": ">3.0.0",
-    "@mamba/dialog": ">3.0.0",
-    "@mamba/icon": ">3.0.0",
-    "@mamba/sprite": ">3.0.0",
-    "@mamba/styles": ">3.0.0",
-    "@mamba/switch": ">3.0.0",
+    "@mamba/app": "^3.0.2",
+    "@mamba/button": "^3.0.2",
+    "@mamba/dialog": "^3.0.2",
+    "@mamba/icon": "^3.0.2",
+    "@mamba/sprite": "^3.0.2",
+    "@mamba/styles": "^3.0.2",
+    "@mamba/switch": "^3.0.2",
     "immer": "^2.1.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
