--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/webpack",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Webpack configs for Mamba Applications",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/configs": ">3.0.0",
+    "@mamba/configs": "^3.0.2",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   },
