--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "html-minifier": "^4.0.0",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "~24.5.0",
+    "jest": "^24.0.0",
     "jest-canvas-mock": "~1.1.0",
     "lerna": "^3.10.7",
     "lint-staged": "~8.1.0",
