--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/icon": "^3.0.2"
+    "@mamba/icon": ">3.0.0"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0",
