--- a/packages/components/Carousel/package.json
+++ b/packages/components/Carousel/package.json
@@ -8,11 +8,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/pos": "^3.0.2",
-    "@mamba/styles": "^3.0.2"
+    "@mamba/pos": ">3.0.0",
+    "@mamba/styles": ">3.0.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
   "dependencies": {
-    "@mamba/icon": "^3.0.2"
+    "@mamba/icon": ">3.0.0"
   }
 }
