--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/styles": "^3.0.2",
+    "@mamba/styles": ">3.0.0",
     "qrious": "^4.0.2"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
