--- a/packages/components/Switch/package.json
+++ b/packages/components/Switch/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "^3.0.2"
+    "@mamba/styles": ">3.0.0"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
