--- a/packages/components/Toast/package.json
+++ b/packages/components/Toast/package.json
@@ -8,10 +8,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/icon": "^3.0.2"
+    "@mamba/icon": ">3.0.0"
   },
   "dependencies": {
-    "@mamba/styles": "^3.0.2"
+    "@mamba/styles": ">3.0.0"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
