--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/configs": "^3.0.2",
+    "@mamba/configs": ">3.0.0",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   },
