chore(release): :robot: publish
 - @mamba/cli@3.0.3
 - @mamba/app@3.0.3
 - @mamba/appbar@3.0.3
 - @mamba/barcode@3.0.3
 - @mamba/brands@3.0.3
 - @mamba/button@3.0.3
 - @mamba/carousel@3.0.3
 - @mamba/collection@3.0.3
 - @mamba/container@3.0.3
 - @mamba/dialog@3.0.3
 - @mamba/icon@3.0.3
 - @mamba/input@3.0.3
 - @mamba/printable@3.0.3
 - @mamba/progress@3.0.3
 - @mamba/qrcode@3.0.3
 - @mamba/radio@3.0.3
 - @mamba/range@3.0.3
 - @mamba/sprite@3.0.3
 - @mamba/switch@3.0.3
 - @mamba/tabs@3.0.3
 - @mamba/toast@3.0.3
 - @mamba/configs@3.0.3
 - @mamba/pos@3.0.3
 - @mamba/styles@3.0.3
 - @mamba/utils@3.0.3
 - @mamba/webpack@3.0.3

--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/printable",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "svelte": "Printable.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,11 +8,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/icon": ">3.0.0",
-    "@mamba/styles": ">3.0.0"
+    "@mamba/icon": "^3.0.3",
+    "@mamba/styles": "^3.0.3"
   },
   "dependencies": {
-    "@mamba/dialog": ">3.0.0"
+    "@mamba/dialog": "^3.0.3"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
