--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/appbar",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "svelte": "AppBar.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/icon": ">3.0.0"
+    "@mamba/icon": "^3.0.3"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0",
