refactor: 💡 Simulator now changes from S920 to MP35P layout

--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -15,7 +15,8 @@
     "@mamba/sprite": "^2.33.3",
     "@mamba/styles": "^2.33.3",
     "@mamba/switch": "^2.33.3",
-    "immer": "^2.1.0"
+    "immer": "^2.1.0",
+    "svelte": "^2.16.1"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
