feat: 🎸 New structure

--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -14,5 +14,8 @@
   "peerDependencies": {
     "@mamba/pos": "^2.8.2"
   },
-  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
+  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
+  "dependencies": {
+    "@mamba/utils": "^3.2.1"
+  }
 }
