chore: 🤖 vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,12 +41,16 @@
     "editor.formatOnSave": false
   },
   "[javascript]": {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[css]": {
     "editor.formatOnSave": true
   },
   "[postcss]": {
     "editor.formatOnSave": true
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   }
 }
