feat: 🎸 prefix decorator props in default row

--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mamba/styles": "^3.4.0",
-    "@mamba/icon": "^3.3.0"
+    "@mamba/icon": "^3.3.0",
+    "@mamba/utils": "^3.3.0"
   }
 }
