chore: 🤖 remove deprecated extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,11 +3,10 @@
     "CoenraadS.bracket-pair-colorizer-2",
     "aaron-bond.better-comments",
     "dbaeumer.vscode-eslint",
-    "shinnn.stylelint",
+    "stylelint.vscode-stylelint",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "formulahendry.auto-close-tag",
-    "jamesbirtles.svelte-vscode",
     "msjsdiag.debugger-for-chrome",
     "ricard.postcss",
     "vincaslt.highlight-matching-tag"
