feat: 🎸 get and apply device class capabilities

--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -16,6 +16,6 @@
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
   "dependencies": {
-    "@mamba/utils": "^3.6.0"
+    "@mamba/utils": ">=3.7.0"
   }
 }
