chore: 🤖 update scripts

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "link:packages": "lerna exec npm link",
     "packages:clear": "lerna exec -- rm -rf node_modules package-lock.json",
     "check-next-version": "echo 'n' | lerna version",
-    "release": "lerna publish"
+    "publish": "lerna publish",
+    "release": "lerna version"
   },
   "config": {
     "commitizen": {
