chore(release): :robot: publish
 - @mamba/cli@3.4.0
 - @mamba/app@3.9.0
 - @mamba/appbar@3.5.5
 - @mamba/barcode@3.5.4
 - @mamba/brands@3.5.4
 - @mamba/button@3.5.5
 - @mamba/carousel@3.5.4
 - @mamba/collection@3.5.4
 - @mamba/container@3.5.4
 - @mamba/dialog@3.5.5
 - @mamba/flatlist@4.3.0
 - @mamba/icon@3.5.4
 - @mamba/input@4.1.0
 - @mamba/printable@3.6.1
 - @mamba/progress@3.5.4
 - @mamba/qrcode@3.5.4
 - @mamba/radio@3.5.4
 - @mamba/range@3.5.4
 - @mamba/sprite@3.5.4
 - @mamba/switch@3.5.4
 - @mamba/tabs@3.5.4
 - @mamba/toast@3.5.4
 - @mamba/configs@3.5.4
 - @mamba/logger@3.5.4
 - @mamba/pos@3.13.0
 - @mamba/styles@3.5.4
 - @mamba/utils@4.2.0
 - @mamba/webpack@3.7.0

--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/flatlist",
-  "version": "4.2.1",
+  "version": "4.3.0",
   "svelte": "Flatlist.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -10,9 +10,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/icon": "^3.5.2",
-    "@mamba/pos": "^3.6.5",
-    "@mamba/styles": "^3.5.2",
+    "@mamba/icon": "3.5.4",
+    "@mamba/pos": "3.13.0",
+    "@mamba/styles": "3.5.4",
     "@mamba/utils": "^3.6.0"
   },
   "gitHead": "79bdec15d647388172f3de619e50c7a61a1ff624"
