--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/app",
-  "version": "3.8.0",
+  "version": "3.9.0",
   "svelte": "App.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,14 +8,14 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/button": "^3.5.2",
-    "@mamba/styles": "^3.5.2"
+    "@mamba/button": "3.5.5",
+    "@mamba/styles": "3.5.4"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
   "dependencies": {
-    "@mamba/utils": ">=3.7.0"
+    "@mamba/utils": "4.2.0"
   }
 }
