--- a/packages/components/Carousel/package.json
+++ b/packages/components/Carousel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/carousel",
-  "version": "3.5.3",
+  "version": "3.5.4",
   "svelte": "Carousel.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,11 +8,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/pos": "^3.6.0",
-    "@mamba/styles": "^3.5.2"
+    "@mamba/pos": "3.13.0",
+    "@mamba/styles": "3.5.4"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
   "dependencies": {
-    "@mamba/icon": "^3.5.2"
+    "@mamba/icon": "3.5.4"
   }
 }
