--- a/packages/components/Container/package.json
+++ b/packages/components/Container/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/container",
-  "version": "3.5.3",
+  "version": "3.5.4",
   "svelte": "Container.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,10 +8,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/icon": "^3.5.2"
+    "@mamba/icon": "3.5.4"
   },
   "dependencies": {
-    "@mamba/styles": "^3.5.2"
+    "@mamba/styles": "3.5.4"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
