--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/printable",
-  "version": "3.6.0",
+  "version": "3.6.1",
   "svelte": "Printable.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,11 +8,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/icon": "^3.5.2",
-    "@mamba/styles": "^3.5.2"
+    "@mamba/icon": "3.5.4",
+    "@mamba/styles": "3.5.4"
   },
   "dependencies": {
-    "@mamba/dialog": "^3.5.2"
+    "@mamba/dialog": "3.5.5"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
