--- a/packages/components/Sprite/package.json
+++ b/packages/components/Sprite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/sprite",
-  "version": "3.5.3",
+  "version": "3.5.4",
   "svelte": "Sprite.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "^3.5.2"
+    "@mamba/styles": "3.5.4"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
