--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/pos",
-  "version": "3.12.0",
+  "version": "3.13.0",
   "description": "Mamba web environment wrapper and simulator",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -9,15 +9,15 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@mamba/app": "^3.5.2",
-    "@mamba/button": "^3.5.2",
-    "@mamba/dialog": "^3.5.2",
-    "@mamba/icon": "^3.5.2",
-    "@mamba/radio": "^3.5.2",
-    "@mamba/sprite": "^3.5.2",
-    "@mamba/styles": "^3.5.2",
-    "@mamba/switch": "^3.5.2",
-    "@mamba/utils": "^4.1.0",
+    "@mamba/app": "3.9.0",
+    "@mamba/button": "3.5.5",
+    "@mamba/dialog": "3.5.5",
+    "@mamba/icon": "3.5.4",
+    "@mamba/radio": "3.5.4",
+    "@mamba/sprite": "3.5.4",
+    "@mamba/styles": "3.5.4",
+    "@mamba/switch": "3.5.4",
+    "@mamba/utils": "4.2.0",
     "immer": "^2.1.0",
     "svelte": "^2.16.1"
   },
