--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,12 @@
 {
   "lerna": "4.0.0",
   "version": "independent",
-  "npmClient": "npm",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "command": {
     "version": {
       "exact": true,
-      "allowBranch": ["release/next"]
+      "allowBranch": ["master", "release/next"]
     },
     "publish": {
       "ignoreChanges": [
