--- a/packages/components/Brands/package.json
+++ b/packages/components/Brands/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/brands",
-  "version": "3.5.4",
+  "version": "3.5.7",
   "svelte": "Brands.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,9 +8,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/styles": "3.5.4"
+    "@mamba/styles": "3.5.7"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
-  }
+  },
+  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
