--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   ],
   "license": "Apache-2.0",
   "engines": {
-    "node": ">= 8 || <= 12",
-    "npm": ">= 6"
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
   },
   "scripts": {
     "lint": "npm run lint:css; npm run lint:js",
