--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -4,6 +4,13 @@
   "svelte": "Button.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "examples": [
     {
       "title": "Padrão",
@@ -46,9 +53,6 @@
       "ih": 100
     }
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "devDependencies": {
     "@mamba/icon": "3.5.9"
   },
