--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -6,6 +6,10 @@
   "license": "Apache-2.0",
   "module": "index.js",
   "main": "index.js",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
