--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -3,6 +3,10 @@
   "version": "3.5.8",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "module": "index.js",
   "main": "index.js",
   "publishConfig": {
