--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,6 +6,10 @@
   "sideEffects": false,
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
