fix: 🐛 normalize the dependencies across packages

--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -54,13 +54,10 @@
     }
   ],
   "devDependencies": {
-    "@mamba/icon": "3.5.9"
-  },
-  "dependencies": {
-    "@mamba/styles": "3.5.9"
+    "@mamba/icon": ">=4"
   },
   "peerDependencies": {
-    "@mamba/pos": ">3.0.0"
+    "@mamba/styles": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
