--- a/packages/components/Carousel/package.json
+++ b/packages/components/Carousel/package.json
@@ -11,12 +11,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@mamba/pos": "3.13.3",
-    "@mamba/styles": "3.5.9"
+  "peerDependencies": {
+    "@mamba/icon": ">=4",
+    "@mamba/styles": ">=4"
   },
-  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
-  "dependencies": {
-    "@mamba/icon": "3.5.9"
-  }
+  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
