--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -12,14 +12,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/switch": "3.5.9"
-  },
-  "dependencies": {
-    "@mamba/icon": "3.5.9",
-    "@mamba/styles": "3.5.9"
+    "@mamba/styles": ">=4",
+    "@mamba/switch": ">=4"
   },
   "peerDependencies": {
-    "@mamba/pos": ">3.0.0"
+    "@mamba/icon": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
