--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -11,15 +11,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@mamba/sprite": "3.5.9"
-  },
-  "dependencies": {
-    "@mamba/icon": "3.5.9",
-    "@mamba/styles": "3.5.9"
-  },
   "peerDependencies": {
-    "@mamba/pos": ">3.0.0"
+    "@mamba/icon": ">=4",
+    "@mamba/styles": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
