--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -12,11 +12,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/styles": "3.5.9",
     "qrious": "^4.0.2"
   },
-  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
   "peerDependencies": {
-    "@mamba/pos": ">3.0.0"
-  }
+    "@mamba/styles": ">=4"
+  },
+  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
