--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -12,13 +12,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/button": "3.5.10",
-    "@mamba/collection": "3.5.9",
-    "@mamba/styles": "3.5.9"
-  },
-  "peerDependencies": {
-    "@mamba/pos": ">3.0.0",
-    "@mamba/styles": ">3.0.0"
+    "@mamba/collection": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
