--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -11,33 +11,24 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "eslint": "^5.13.0",
-    "postcss": "^7.0.14",
-    "prettier": "^1.16.4",
-    "stylelint": "^10.1.0",
-    "svelte-preprocess": "^2.4.3"
-  },
   "peerDependencies": {
-    "@babel/core": "^7.2.2",
-    "@mamba/pos": ">3.0.0",
-    "eslint": "^5.13.0",
-    "postcss": "^7.0.14",
-    "prettier": "^1.16.4",
-    "svelte-preprocess": "^2.4.3"
+    "@mamba/keyboard": "*"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "~7.12.17",
+    "@babel/preset-typescript": "^7.17.12",
     "@babel/runtime": "^7.3.1",
     "@tivac/eslint-plugin-svelte": "^1.2.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "chalk": "^2.4.2",
+    "core-js": "~3.4.0",
     "css-mqpacker": "^7.0.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-html": "^5.0.3",
@@ -45,19 +36,26 @@
     "eslint-plugin-jest": "^22.2.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "postcss": "^7.0.0",
     "postcss-advanced-variables": "^3.0.0",
     "postcss-calc": "^7.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
     "postcss-hexrgba": "^1.0.2",
     "postcss-html": "^0.36.0",
-    "postcss-nested": "^4.1.1",
-    "postcss-preset-env": "^6.5.0",
+    "postcss-nested": "^4.0.0",
+    "postcss-preset-env": "^6.0.0",
     "postcss-reporter": "^6.0.1",
     "postcss-syntax": "^0.36.2",
+    "prettier": "^2.6.0",
     "quickenv": "^0.0.6",
     "resolve": "^1.10.0",
-    "stylelint-config-standard": "^18.3.0",
+    "stylelint": "^14.0.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
+    "svelte": "<3",
+    "svelte-preprocess": "<3",
+    "typescript": "^4.7.2",
     "webpack-merge": "^4.2.1"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
