--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -23,8 +23,8 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "@mamba/configs": "3.5.9",
     "ncp": "^2.0.0",
+    "postcss": "^7.0.0",
     "postcss-cli": "^6.1.3",
     "rimraf": "^2.6.3"
   },
