--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -11,7 +11,8 @@
     "node": ">= 8 || <= 14",
     "npm": "^7 || ^8"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@mamba/configs": ">=4",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
@@ -25,14 +26,16 @@
     "mini-css-extract-plugin": "^0.6.0",
     "mini-html-webpack-plugin": "^0.2.3",
     "optimize-css-assets-webpack-plugin": "^5.0.8",
+    "postcss": "^7.0.0",
     "postcss-loader": "^3.0.0",
     "quickenv": "^0.0.6",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "svelte": "<3",
     "svelte-loader": "^2.12.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.3",
+    "webpack": ">=4 <5",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.11.3",
