--- a/package.json
+++ b/package.json
@@ -59,13 +59,22 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/eslint-parser": "^7.18.2",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^14.1.0",
     "@commitlint/config-lerna-scopes": "^15.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "babel-jest": "^24.5.0",
     "commitizen": "^3.1.2",
     "cross-env": "^5.2.0",
     "deasync": "^0.1.14",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "git-cz": "^3.0.0",
     "husky": "^1.3.1",
     "immer": "^2.1.5",
@@ -74,6 +83,8 @@
     "lerna": "^4.0.0",
     "lint-staged": "~8.1.0",
     "npm-run-all": "^4.1.5",
-    "quickenv": "^0.0.6"
+    "prettier": "^2.0.0",
+    "quickenv": "^0.0.6",
+    "typescript": "^4.7.2"
   }
 }
