--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -18,6 +18,7 @@
     "chalk": "^2.4.2",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.11",
+    "eslint": "^7.0.0",
     "eslint-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "filemanager-webpack-plugin": "^2.0.5",
