--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -6,14 +6,18 @@
   "license": "Apache-2.0",
   "module": "index.js",
   "main": "index.js",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "@mamba/icon": "3.5.9",
-    "@mamba/pos": "3.13.3",
-    "@mamba/styles": "3.5.9",
-    "@mamba/utils": "^3.6.0"
+  "peerDependencies": {
+    "@mamba/icon": ">=4",
+    "@mamba/styles": ">=4",
+    "@mamba/utils": ">=4",
+    "@mamba/keyboard": "*"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
