--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   ],
   "license": "Apache-2.0",
   "engines": {
-    "node": ">= 8 || <= 12",
-    "npm": ">= 6"
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
   },
   "scripts": {
     "lint": "npm run lint:css; npm run lint:js",
@@ -27,7 +27,9 @@
     "link:packages": "lerna exec npm link",
     "packages:clear": "lerna exec -- rm -rf node_modules package-lock.json",
     "check-next-version": "echo 'n' | lerna version",
-    "release": "rm -rf packages/**/package-lock.json && lerna publish"
+    "release": "rm -rf packages/**/package-lock.json && lerna publish",
+    "link:name": "./tools/get-links.sh -m name",
+    "link:path": "./tools/get-links.sh -m path"
   },
   "config": {
     "commitizen": {
@@ -58,51 +60,21 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^14.1.0",
     "@commitlint/config-lerna-scopes": "^15.0.0",
-    "@gen/rollup-plugin-generate-html": "^0.1.1",
-    "@mamba/app": "file:packages/components/App",
-    "@mamba/configs": "file:packages/configs",
-    "@mamba/pos": "file:packages/pos",
-    "@mamba/styles": "file:packages/styles",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.5.0",
     "commitizen": "^3.1.2",
-    "core-js": "~3.1.0",
     "cross-env": "^5.2.0",
     "deasync": "^0.1.14",
-    "eslint": "^5.12.0",
     "git-cz": "^3.0.0",
-    "html-minifier": "^4.0.0",
     "husky": "^1.3.1",
-    "identity-obj-proxy": "^3.0.0",
+    "immer": "^2.1.5",
     "jest": "^24.0.0",
     "jest-canvas-mock": "~1.1.0",
     "lerna": "^4.0.0",
     "lint-staged": "~8.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.13",
-    "prettier": "^1.15.3",
-    "quickenv": "^0.0.6",
-    "rollup": "^1.1.0",
-    "rollup-plugin-alias": "^1.5.1",
-    "rollup-plugin-babel": "^4.3.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-copy": "^0.3.0",
-    "rollup-plugin-filesize": "^6.0.0",
-    "rollup-plugin-livereload": "^0.6.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-serve": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-url": "^2.1.0",
-    "rollup-plugin-virtual": "^1.0.1",
-    "stylelint": "^9.10.0",
-    "stylelint-config-standard": "^21.0.0",
-    "svelte": "^2.16.0",
-    "svelte-preprocess": "^2.4.3",
-    "webpack-merge": "^4.2.2"
+    "quickenv": "^0.0.6"
   }
 }
