--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -4,18 +4,19 @@
   "svelte": "App.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@mamba/button": "3.5.10",
-    "@mamba/styles": "3.5.9"
-  },
   "peerDependencies": {
-    "@mamba/pos": ">3.0.0"
+    "@mamba/button": "*",
+    "@mamba/pos": ">=4",
+    "@mamba/utils": ">=4",
+    "@mamba/styles": ">=4",
+    "@mamba/keyboard": "*"
   },
-  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
-  "dependencies": {
-    "@mamba/utils": "4.2.4"
-  }
+  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
