--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -4,6 +4,13 @@
   "svelte": "Button.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "examples": [
     {
       "title": "Padrão",
@@ -46,17 +53,11 @@
       "ih": 100
     }
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "devDependencies": {
-    "@mamba/icon": "3.5.9"
-  },
-  "dependencies": {
-    "@mamba/styles": "3.5.9"
+    "@mamba/icon": ">=4"
   },
   "peerDependencies": {
-    "@mamba/pos": ">3.0.0"
+    "@mamba/styles": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
