--- a/packages/components/Carousel/package.json
+++ b/packages/components/Carousel/package.json
@@ -4,15 +4,16 @@
   "svelte": "Carousel.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@mamba/pos": "3.13.3",
-    "@mamba/styles": "3.5.9"
+  "peerDependencies": {
+    "@mamba/icon": ">=4",
+    "@mamba/styles": ">=4"
   },
-  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
-  "dependencies": {
-    "@mamba/icon": "3.5.9"
-  }
+  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
