--- a/packages/components/Switch/package.json
+++ b/packages/components/Switch/package.json
@@ -4,14 +4,12 @@
   "svelte": "Switch.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
-  },
-  "devDependencies": {
-    "@mamba/styles": "3.5.9"
-  },
-  "peerDependencies": {
-    "@mamba/pos": ">3.0.0"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
