--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -4,17 +4,15 @@
   "svelte": "Tabs.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/button": "3.5.10",
-    "@mamba/collection": "3.5.9",
-    "@mamba/styles": "3.5.9"
-  },
-  "peerDependencies": {
-    "@mamba/pos": ">3.0.0",
-    "@mamba/styles": ">3.0.0"
+    "@mamba/collection": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
