--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -4,23 +4,27 @@
   "description": "Mamba core and reset styles",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "npm run build:pos && npm run build:desktop",
+    "build": "yarn run build:pos && yarn run build:desktop",
     "build:pos": "postcss ./src/pos.pcss -o ./dist/pos.css --verbose",
     "build:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css --verbose",
     "postbuild": "ncp ./src/assets dist/assets",
-    "start": "npm run start:pos",
+    "start": "yarn run start:pos",
     "start:pos": "postcss ./src/pos.pcss -o ./dist/pos.css -w --verbose",
     "start:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css -w --verbose",
-    "prepublish": "npm run build"
+    "prepublish": "yarn run build"
   },
   "devDependencies": {
-    "@mamba/configs": "3.5.9",
     "ncp": "^2.0.0",
+    "postcss": "^7.0.0",
     "postcss-cli": "^6.1.3",
     "rimraf": "^2.6.3"
   },
