--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,12 +6,16 @@
   "sideEffects": false,
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "0daaddf15510894989750580009daa93e1fbb6db",
   "dependencies": {
     "date-fns": "2.28.0",
     "date-fns-tz": "1.2.2"
-  }
+  },
+  "gitHead": "0daaddf15510894989750580009daa93e1fbb6db"
 }
